weisserbalken zwischen main und footer entfernt. alte files gelöscht

--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -5,6 +5,7 @@
     --main-belizehole : #2980b9;
     --main-dark: #494949;
     --main-peterriver: rgba(242, 242, 242, 0.49);
+    --main-peterriver2: rgb(242, 242, 242);
     --main-lightgrey: lightgrey;
     --main-darkred: #380426;
 }
@@ -23,6 +24,7 @@ body{
     font-size: 100%;
     min-height: 100%;
     position: relative;
+    background-color:  var(--main-darkred);
 }
 
 header, section, footer, aside, nav, main, article, figure, div {
@@ -82,7 +84,8 @@ header a{
 }
 
 nav {
-    background: var(--main-peterriver);
+   /* background: var(--main-peterriver);*/
+    background:var(--main-peterriver2);
     color: #FFFFFF;
 
 }
