--- a/assets/stylesheets/styles.css
+++ b/assets/stylesheets/styles.css
@@ -148,6 +148,9 @@ article:last-child{
     align-items: center;
 }
 
+
+
+
 .btn{
     display: inline-block;
     position: relative;
@@ -163,6 +166,46 @@ article:last-child{
     transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
     transition-delay: 0.2s;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+
+}
+.btn2{
+    display: inline-block;
+    position: relative;
+    width: 145px;
+    height: 32px;
+    line-height: 32px;
+    border: none;
+    border-radius: 2px;
+    font-size: 0.9em;
+    text-decoration: none;
+    text-align: center;
+    cursor: pointer;
+    transition: box-shadow 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    transition-delay: 0.2s;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.26);
+    background-color: #c3c8df;
+    color: #380426;
+    font-family: 'Noto Sans', sans-serif;
+   margin-top:0.2em;
+}
+
+.btn2:hover{
+    background-color: #381137;
+    color:white;
+}
+a.linkadmin{
+    width: 160px;
+    height: 50px;
+background-color:var(--main-peterriver);
+    color: #380426;
+    padding: .7em;
+    text-decoration: none;
+    overflow:auto;
+}
+a.linkadmin:hover {
+    background-color: #c3c8df;
+    color: #380426;
+    font-weight: normal;
 }
 
 .article-buy a, input[type='submit']{
@@ -195,11 +238,14 @@ article:last-child{
 
 .title h3{
     margin: 0 auto;
+    color:white;
+    font-weight:normal;
 }
 
 aside{
     background: var(--main-darkred);
 }
+
 
 footer{
     background: var(--main-darkred);
@@ -409,7 +455,7 @@ float: right;
 }
 
 .address-input{
-    margin: 1em 0;
+    margin: 1em;
 
 }
 
@@ -419,6 +465,15 @@ float: right;
     margin-right: 10px;
 }
 
+.admin-add{
+font-size:18px;
+    display:block;
+    width:300px;
+    border:none;
+    border-bottom:solid 1px #3f51b5;
+    border-radius:0px;
+    margin-top:0.5em;
+}
 .productImage {
     margin-right: 10px;
 }
